rsvp integration and some other small improvements

--- a/gift_list.html
+++ b/gift_list.html
@@ -78,7 +78,7 @@
 			<div class="row">
 				<div class="col-md-8 col-md-offset-2 text-center tebw-heading animate-box">
 					<h2>Presentes</h2>
-					<p>É isso aí</p>
+					<p>Ainda não finalizamos essa parte. Enquanto isso, quem ganha o presente é você: segue disponível por tempo limitado algumas fotos do casal.</p>
 				</div>
 			</div>
 			<div class="row row-bottom-padded-md">
@@ -88,7 +88,6 @@
 						<li class="one-third animate-box" data-animate-effect="fadeIn" style="background-image: url(images/gallery-1.jpg); "> 
 							<a href="images/gallery-1.jpg">
 								<div class="case-studies-summary">
-									<span>14 Photos</span>
 									<h2>Two Glas of Juice</h2>
 								</div>
 							</a>
@@ -96,7 +95,6 @@
 						<li class="one-third animate-box" data-animate-effect="fadeIn" style="background-image: url(images/gallery-2.jpg); ">
 							<a href="#" class="color-2">
 								<div class="case-studies-summary">
-									<span>30 Photos</span>
 									<h2>Timer starts now!</h2>
 								</div>
 							</a>
@@ -106,7 +104,6 @@
 						<li class="one-third animate-box" data-animate-effect="fadeIn" style="background-image: url(images/gallery-3.jpg); ">
 							<a href="#" class="color-3">
 								<div class="case-studies-summary">
-									<span>90 Photos</span>
 									<h2>Beautiful sunset</h2>
 								</div>
 							</a>
@@ -114,7 +111,6 @@
 						<li class="one-third animate-box" data-animate-effect="fadeIn" style="background-image: url(images/gallery-4.jpg); ">
 							<a href="#" class="color-4">
 								<div class="case-studies-summary">
-									<span>12 Photos</span>
 									<h2>Company's Conference Room</h2>
 								</div>
 							</a>
@@ -123,7 +119,6 @@
 						<li class="one-third animate-box" data-animate-effect="fadeIn" style="background-image: url(images/gallery-5.jpg); ">
 							<a href="#" class="color-3">
 								<div class="case-studies-summary">
-									<span>50 Photos</span>
 									<h2>Useful baskets</h2>
 								</div>
 							</a>
@@ -131,7 +126,6 @@
 						<li class="one-third animate-box" data-animate-effect="fadeIn" style="background-image: url(images/gallery-6.jpg); ">
 							<a href="#" class="color-4">
 								<div class="case-studies-summary">
-									<span>45 Photos</span>
 									<h2>Skater man in the road</h2>
 								</div>
 							</a>
@@ -140,7 +134,6 @@
 						<li class="one-third animate-box" data-animate-effect="fadeIn" style="background-image: url(images/gallery-7.jpg); ">
 							<a href="#" class="color-4">
 								<div class="case-studies-summary">
-									<span>35 Photos</span>
 									<h2>Two Glas of Juice</h2>
 								</div>
 							</a>
@@ -149,7 +142,6 @@
 						<li class="one-third animate-box" data-animate-effect="fadeIn" style="background-image: url(images/gallery-8.jpg); "> 
 							<a href="#" class="color-5">
 								<div class="case-studies-summary">
-									<span>90 Photos</span>
 									<h2>Timer starts now!</h2>
 								</div>
 							</a>
@@ -157,7 +149,6 @@
 						<li class="one-third animate-box" data-animate-effect="fadeIn" style="background-image: url(images/gallery-9.jpg); ">
 							<a href="#" class="color-6">
 								<div class="case-studies-summary">
-									<span>56 Photos</span>
 									<h2>Beautiful sunset</h2>
 								</div>
 							</a>
