--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 		<title>Thaís e Bruno</title>
 		<meta name="viewport" content="width=device-width, initial-scale=1">
 
+		<link rel="icon" type="image/png" href="favicon.png">
 		<link href='https://fonts.googleapis.com/css?family=Work+Sans:400,300,600,400italic,700' rel='stylesheet' type='text/css'>
 		<link href="https://fonts.googleapis.com/css?family=Sacramento" rel="stylesheet">
 		
@@ -79,7 +80,6 @@
 								<h1>Thaís &amp; Bruno</h1>
 								<h2>Vão se casar</h2>
 								<div class="simply-countdown simply-countdown-one"></div>
-								<p><a href="#" class="btn btn-default btn-sm">Reserve a data</a></p>
 							</div>
 						</div>
 					</div>
@@ -103,7 +103,7 @@
 						</div>
 						<div class="desc-groom">
 							<h3>Bruno Meireles Guitarrari</h3>
-							<p>Menino bacana</p>
+							<p>Virgem com ascendente em Aquário</p>
 						</div>
 					</div>
 					<p class="heart text-center"><i class="icon-heart2"></i></p>
@@ -113,7 +113,7 @@
 						</div>
 						<div class="desc-bride">
 							<h3>Thaís Finck de Oliveira</h3>
-							<p>Princesona</p>
+							<p>Libra com ascendente em Peixes</p>
 						</div>
 					</div>
 				</div>
@@ -184,7 +184,7 @@
 						<ul id="tebw-gallery-list">
 							
 							<li class="one-third animate-box" data-animate-effect="fadeIn" style="background-image: url(images/dicas-beleza2.jpg); "> 
-								<a href="beleza_pura.html">
+								<a href="dica_beleza.html">
 									<div class="case-studies-summary">
 										<h2>Dicas de Beleza</h2>
 									</div>
