--- a/o_que_vestir.html
+++ b/o_que_vestir.html
@@ -52,7 +52,7 @@
 				<div class="col-md-9 col-xs-7 text-right menu-1">
 					<ul>
 						<li><a href="index.html">Home</a></li>
-						<li class="has-dropdown">
+						<li class="has-dropdown active">
 							<a>Utilidades</a>
 								<ul class="dropdown">
 									<li><a href="dica_beleza.html">Dicas de beleza</a></li>
@@ -62,7 +62,7 @@
 							</a>
 						</li>
 						<li><a href="gift_list.html">Presentes</a></li>
-						<li class="active"><a href="rsvp.html">RSVP</a></li>
+						<li><a href="rsvp.html">RSVP</a></li>
 					</ul>
 				</div>
 			</div>
@@ -79,22 +79,22 @@
 			<div class="col-md-8 col-xs-12 col-md-offset-2">
 				<h2>O que Vestir</h2>
 				
-				<p>Nossa intenção é responder algumas dúvidas frequentes, então fique a vontade para segui-lás ou não :)</p>
+				<p>Fizemos esse textinho para responder algumas dúvidas frequentes, mas fique a vontade para segui-lás ou não :)</p>
 
-				<h3>Dress code: Esporte fino</h3>
+				<h3>1. Dress code: Esporte fino</h3>
 				<p>Definição da Maria Kalil: É um estilo muito versátil e perfeito para situações que exigem um contraponto do formal com o informal. Antigamente, era chamado de tenue de ville, mas ao longo dos anos, foi recebendo esse nome devido sua influência no traje esporte (por causa de sua casualidade) e o traje social (um pouco mais formal).</p>
 
 				<p>Definição do Bruno e da Thaís: Esteja confortável e feliz.</p>
 
 				<h3>2. Clima na cidade</h3>
-				Novembro é um mês quente em Urubici, mas é bastante comum esfriar um pouco durante a noite na cidade, então recomendamos levar casaco e calça comprida na mala. (As temperaturas neste mês costumam ficar na faixa de 20 até 10 graus).</p>
+				Novembro é um mês quente em Urubici, mas é bastante comum esfriar um pouco durante a noite na cidade, então recomendamos levar casaquinhos finos e calça comprida na mala. (As temperaturas neste mês costumam ficar na faixa de 20º, podendo chegar a 10º em alguns momentos do dia).</p>
 
 				<p>No dia do casamento a cerimônia ocorre de dia em um local aberto e a recepção começa às 18h em um salão fechado.</p>
 
 				<h3>3. Preocupações de casamento ao ar livre</h3>
-				<p>O casamento será ao ar livre, porém existe estradinhas para você andar tanto no local da cerimônia quanto no caminho até o salão de festa, sendo assim, não se preocupe com lama ou grama na hora de escolher que sapato ou comprimento de vestido usar.</p>
+				<p>O casamento será ao ar livre, porém existe estradinhas pavimentadas para você andar tanto no local da cerimônia quanto no caminho até o salão de festa, sendo assim, não se preocupe com lama ou grama na hora de escolher que sapato ou comprimento de vestido usar.</p>
 
-				<p>Apesar de ser em local aberto, a cerimônia ocorrerá em um local arborizado e com bastante sombra.</p>
+				<p>Apesar de ser aberto, a cerimônia ocorrerá em um local arborizado e com bastante sombra.</p>
 
 			</div>
 		</div>
