--- a/dica_beleza.html
+++ b/dica_beleza.html
@@ -52,7 +52,7 @@
 				<div class="col-md-9 col-xs-7 text-right menu-1">
 					<ul>
 						<li><a href="index.html">Home</a></li>
-						<li class="has-dropdown">
+						<li class="has-dropdown active">
 							<a>Utilidades</a>
 								<ul class="dropdown">
 									<li><a href="dica_beleza.html">Dicas de beleza</a></li>
@@ -62,7 +62,7 @@
 							</a>
 						</li>
 						<li><a href="gift_list.html">Presentes</a></li>
-						<li class="active"><a href="rsvp.html">RSVP</a></li>
+						<li><a href="rsvp.html">RSVP</a></li>
 					</ul>
 				</div>
 			</div>
@@ -79,7 +79,9 @@
 			<div class="col-md-8 col-xs-12 col-md-offset-2">
 				<h2>Como Acertar na Beleza</h2>
 
-				<p>Destination wedding é a palavra de ordem entre os casamentos do momento. Trancoso, Paraty, Bahamas, Toscana [ou em Urubici]. Não importa o destino que sua amiga querida escolheu para dizer “sim”, você vai precisar organizar, além de passagem e hospedagem, o que – e onde – vai fazer a maquiagem e o cabelo para estar pronta para a festança. Quer saber como? Leia a matéria da editora de beleza Luiza Souza e confira o texto completo na nova edição da revista Vogue Noiva.
+				<p>Fonte: Vogue Noiva [com adaptações]</p>
+
+			    <p>Destination wedding é a palavra de ordem entre os casamentos do momento. Trancoso, Paraty, Bahamas, Toscana [ou Urubici]. Não importa o destino que sua amiga querida escolheu para dizer “sim”, você vai precisar organizar, além de passagem e hospedagem, o que – e onde – vai fazer a maquiagem e o cabelo para estar pronta para a festança. Quer saber como? Leia a matéria da editora de beleza Luiza Souza e confira o texto completo na nova edição da revista Vogue Noiva.</p>
 
 				<h3>1. Vai apostar em um profissional novo? Siga todos estes passos:</h3>
 				<p>Apostar num profissional às cegas pode dar certo: saiba exatamente o que quer e antes de marcar o horário dê uma busca em seu Facebook, analise o perfil do maquiador e busque referências de looks que ele já tenha feito. “Leve suas preferências de makes e penteados e fotos do vestido que vai usar no dia, passos que minimizam as chances de erros e insatisfação”, sugere Alex Cardoso, maquiador do Square Hair, em São Paulo. Lembre-se também da máxima “menos é mais”. “É natural que o profissional queira mostrar o melhor de seu trabalho, mas você deve insistir que prefere um look sutil. Fuja do olho preto, o mais difícil de corrigir”, opina o make-up artist Rosman Braz. Uma dica é apostar no clássico delineador e batom vermelho intenso.</p>
