new images and more css improvementes

--- a/gift_list.html
+++ b/gift_list.html
@@ -78,80 +78,74 @@
 			<div class="row">
 				<div class="col-md-8 col-md-offset-2 text-center tebw-heading animate-box">
 					<h2>Presentes</h2>
-					<p>Ainda não finalizamos essa parte. Enquanto isso, quem ganha o presente é você: segue disponível por tempo limitado algumas fotos do casal.</p>
+					<p>Ainda não finalizamos essa parte. Enquanto isso, quem ganha o presente é você: seguem disponíveis, por tempo limitado, algumas fotos do casal.</p>
 				</div>
 			</div>
 			<div class="row row-bottom-padded-md">
 				<div class="col-md-12">
 					<ul id="tebw-gallery-list">
-						
-						<li class="one-third animate-box" data-animate-effect="fadeIn" style="background-image: url(images/gallery-1.jpg); "> 
-							<a href="images/gallery-1.jpg">
-								<div class="case-studies-summary">
-									<h2>Two Glas of Juice</h2>
-								</div>
-							</a>
+						<li class="one-third" data-animate-effect="fadeIn" style="background-image: url(images/gallery/site2.jpg); ">
+							<a href="images/gallery/site2.jpg"></a>
 						</li>
-						<li class="one-third animate-box" data-animate-effect="fadeIn" style="background-image: url(images/gallery-2.jpg); ">
-							<a href="#" class="color-2">
-								<div class="case-studies-summary">
-									<h2>Timer starts now!</h2>
-								</div>
-							</a>
+						<li class="one-third" data-animate-effect="fadeIn" style="background-image: url(images/gallery/site3.jpg); ">
+							<a href="images/gallery/site3.jpg"></a>
 						</li>
-
-
-						<li class="one-third animate-box" data-animate-effect="fadeIn" style="background-image: url(images/gallery-3.jpg); ">
-							<a href="#" class="color-3">
-								<div class="case-studies-summary">
-									<h2>Beautiful sunset</h2>
-								</div>
-							</a>
+						<li class="one-third" data-animate-effect="fadeIn" style="background-image: url(images/gallery/site4.jpg); ">
+							<a href="images/gallery/site4.jpg"></a>
 						</li>
-						<li class="one-third animate-box" data-animate-effect="fadeIn" style="background-image: url(images/gallery-4.jpg); ">
-							<a href="#" class="color-4">
-								<div class="case-studies-summary">
-									<h2>Company's Conference Room</h2>
-								</div>
-							</a>
+						<li class="one-third" data-animate-effect="fadeIn" style="background-image: url(images/gallery/site5.jpg); ">
+							<a href="images/gallery/site5.jpg"></a>
 						</li>
-
-						<li class="one-third animate-box" data-animate-effect="fadeIn" style="background-image: url(images/gallery-5.jpg); ">
-							<a href="#" class="color-3">
-								<div class="case-studies-summary">
-									<h2>Useful baskets</h2>
-								</div>
-							</a>
+						<li class="one-third" data-animate-effect="fadeIn" style="background-image: url(images/gallery/site6.jpg); ">
+							<a href="images/gallery/site6.jpg"></a>
 						</li>
-						<li class="one-third animate-box" data-animate-effect="fadeIn" style="background-image: url(images/gallery-6.jpg); ">
-							<a href="#" class="color-4">
-								<div class="case-studies-summary">
-									<h2>Skater man in the road</h2>
-								</div>
-							</a>
+						<li class="one-third" data-animate-effect="fadeIn" style="background-image: url(images/gallery/site7.jpg); ">
+							<a href="images/gallery/site7.jpg"></a>
 						</li>
-
-						<li class="one-third animate-box" data-animate-effect="fadeIn" style="background-image: url(images/gallery-7.jpg); ">
-							<a href="#" class="color-4">
-								<div class="case-studies-summary">
-									<h2>Two Glas of Juice</h2>
-								</div>
-							</a>
+						<li class="one-third" data-animate-effect="fadeIn" style="background-image: url(images/gallery/site8.jpg); "> 
+							<a href="images/gallery/site8.jpg"></a>
 						</li>
-
-						<li class="one-third animate-box" data-animate-effect="fadeIn" style="background-image: url(images/gallery-8.jpg); "> 
-							<a href="#" class="color-5">
-								<div class="case-studies-summary">
-									<h2>Timer starts now!</h2>
-								</div>
-							</a>
+						<li class="one-third" data-animate-effect="fadeIn" style="background-image: url(images/gallery/site9.jpg); ">
+							<a href="images/gallery/site9.jpg"></a>
 						</li>
-						<li class="one-third animate-box" data-animate-effect="fadeIn" style="background-image: url(images/gallery-9.jpg); ">
-							<a href="#" class="color-6">
-								<div class="case-studies-summary">
-									<h2>Beautiful sunset</h2>
-								</div>
-							</a>
+						<li class="one-third" data-animate-effect="fadeIn" style="background-image: url(images/gallery/site10.jpg); ">
+							<a href="images/gallery/site10.jpg"></a>
+						</li>
+						<li class="one-third" data-animate-effect="fadeIn" style="background-image: url(images/gallery/site11.jpg); ">
+							<a href="images/gallery/site11.jpg"></a>
+						</li>
+						<li class="one-third" data-animate-effect="fadeIn" style="background-image: url(images/gallery/site12.jpg); ">
+							<a href="images/gallery/site12.jpg"></a>
+						</li>
+						<li class="one-third" data-animate-effect="fadeIn" style="background-image: url(images/gallery/site13.jpg); ">
+							<a href="images/gallery/site13.jpg"></a>
+						</li>
+						<li class="one-third" data-animate-effect="fadeIn" style="background-image: url(images/gallery/site14.jpg); "> 
+							<a href="images/gallery/site14.jpg"></a>
+						</li>
+						<li class="one-third" data-animate-effect="fadeIn" style="background-image: url(images/gallery/site15.jpg); ">
+							<a href="images/gallery/site15.jpg"></a>
+						</li>
+						<li class="one-third" data-animate-effect="fadeIn" style="background-image: url(images/gallery/site16.jpg); ">
+							<a href="images/gallery/site16.jpg"></a>
+						</li>
+						<li class="one-third" data-animate-effect="fadeIn" style="background-image: url(images/gallery/site17.jpg); ">
+							<a href="images/gallery/site17.jpg"></a>
+						</li>
+						<li class="one-third" data-animate-effect="fadeIn" style="background-image: url(images/gallery/site18.jpg); ">
+							<a href="images/gallery/site18.jpg"></a>
+						</li>
+						<li class="one-third" data-animate-effect="fadeIn" style="background-image: url(images/gallery/site19.jpg); ">
+							<a href="images/gallery/site19.jpg"></a>
+						</li>
+						<li class="one-third" data-animate-effect="fadeIn" style="background-image: url(images/gallery/site20.jpg); "> 
+							<a href="images/gallery/site20.jpg"></a>
+						</li>
+						<li class="one-third" data-animate-effect="fadeIn" style="background-image: url(images/gallery/site21.jpg); ">
+							<a href="images/gallery/site21.jpg"></a>
+						</li>
+						<li class="one-third" data-animate-effect="fadeIn" style="background-image: url(images/gallery/site22.jpg); "> 
+							<a href="images/gallery/site22.jpg"></a>
 						</li>
 					</ul>		
 				</div>
