--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
 			</div>
 		</div>
 
-		<div id="tebw-event" class="tebw-bg" style="background-image:url(images/gruta.jpg);">
+		<div id="tebw-event" class="tebw-bg" style="background-image:url(images/urubici.jpg);">
 			<div class="overlay"></div>
 			<div class="container">
 				<div class="row">
@@ -145,7 +145,7 @@
 											<span>Sábado 16</span>
 											<span>Novembro, 2019</span>
 										</div>
-										<p>A Gruta de Nossa Senhora de Lourdes foi o local escolhido pelo casal para realização da cerimonia. Um local especial na cidade Urubici, em meio a natureza e cheio de paz.</p>
+										<p>A Gruta de Nossa Senhora de Lourdes foi o local escolhido pelo casal para realização da cerimonia. Um local especial na cidade de Urubici, em meio a natureza e cheio de paz.</p>
 									</div>
 								</div>
 								<div class="col-md-6 col-sm-6 text-center">
@@ -161,7 +161,7 @@
 											<span>Sabado 16</span>
 											<span>Novembro, 2019</span>
 										</div>
-										<p>Do ladinho da Gruta fica o Salão de Santa Tereza onde será a realizada a Recepção,  para um festa com muita comida, bebida e gente feliz! Todos estão convidados <3</p>
+										<p>Do ladinho da Gruta fica o Salão de Santa Tereza onde será a realizada a Recepção, para um festa com muita comida, bebida e gente feliz! Todos estão convidados <3</p>
 									</div>
 								</div>
 							</div>
@@ -183,14 +183,14 @@
 					<div class="col-md-12">
 						<ul id="tebw-gallery-list">
 							
-							<li class="one-third animate-box" data-animate-effect="fadeIn" style="background-image: url(images/dicas-beleza2.jpg); "> 
+							<li class="one-third postcards animate-box" data-animate-effect="fadeIn" style="background-image: url(images/dicas-beleza2.jpg); "> 
 								<a href="dica_beleza.html">
 									<div class="case-studies-summary">
 										<h2>Dicas de Beleza</h2>
 									</div>
 								</a>
 							</li>
-							<li class="one-third animate-box" data-animate-effect="fadeIn" style="background-image: url(images/onde-ficar2.jpg); ">
+							<li class="one-third postcards animate-box" data-animate-effect="fadeIn" style="background-image: url(images/onde-ficar2.jpg); ">
 								<a href="onde_ficar.html" class="color-2">
 									<div class="case-studies-summary">
 										<h2>Onde Ficar</h2>
@@ -199,7 +199,7 @@
 							</li>
 
 
-							<li class="one-third animate-box" data-animate-effect="fadeIn" style="background-image: url(images/o-que-vestir2.jpg); ">
+							<li class="one-third postcards animate-box" data-animate-effect="fadeIn" style="background-image: url(images/o-que-vestir2.jpg); ">
 								<a href="o_que_vestir.html" class="color-3">
 									<div class="case-studies-summary">
 										<h2>O que Vestir</h2>
@@ -213,7 +213,6 @@
 		</div>
 
 
-		
 		<div id="tebw-services" class="tebw-section-gray">
 			<div class="container">
 				
