--- a/rsvp.html
+++ b/rsvp.html
@@ -98,7 +98,7 @@
 					<div class="form-group second-step">
 						<div class="invitee-list"></div>
 						<dir class="add-more-message">
-							<p>Estamos contanto com no máximo dois extras por convite. Caso tenhamos esquecido de alguém, por favor entre em contato.</p>
+							<p>Estamos contando com no máximo dois extras por convite. Caso tenhamos esquecido de alguém, por favor entre em contato.</p>
 						</dir>
 						<button type="button" id="add-invt-btn" class="btn-default btn-block">
 							<i class="icon-plus"></i>
@@ -163,7 +163,7 @@
 
 	<!-- Stellar -->
 	<script src="js/jquery.stellar.min.js"></script>
-	
+
 	<!-- Magnific Popup -->
 	<script src="js/jquery.magnific-popup.min.js"></script>
 	<script src="js/magnific-popup-options.js"></script>
