reduce some images sizes and add footer to other pages

--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
 				<div class="couple-wrap animate-box">
 					<div class="couple-half">
 						<div class="groom">
-							<img src="images/groom.png" alt="groom" class="img-responsive">
+							<img src="images/groom.jpg" alt="groom" class="img-responsive">
 						</div>
 						<div class="desc-groom">
 							<h3>Bruno Meireles Guitarrari</h3>
@@ -109,7 +109,7 @@
 					<p class="heart text-center"><i class="icon-heart2"></i></p>
 					<div class="couple-half">
 						<div class="bride">
-							<img src="images/bride.png" alt="groom" class="img-responsive">
+							<img src="images/bride.jpg" alt="groom" class="img-responsive">
 						</div>
 						<div class="desc-bride">
 							<h3>Thaís Finck de Oliveira</h3>
@@ -170,48 +170,6 @@
 				</div>
 			</div>
 		</div>
-
-
-		<div id="tebw-gallery" class="tebw-section">
-			<div class="container">
-				<div class="row">
-					<div class="col-md-8 col-md-offset-2 text-center tebw-heading animate-box">
-						<h2>Utilidades</h2>
-					</div>
-				</div>
-				<div class="row row-bottom-padded-md">
-					<div class="col-md-12">
-						<ul id="tebw-gallery-list">
-							
-							<li class="one-third postcards animate-box" data-animate-effect="fadeIn" style="background-image: url(images/dicas-beleza2.jpg); "> 
-								<a href="dica_beleza.html">
-									<div class="case-studies-summary">
-										<h2>Dicas de Beleza</h2>
-									</div>
-								</a>
-							</li>
-							<li class="one-third postcards animate-box" data-animate-effect="fadeIn" style="background-image: url(images/onde-ficar2.jpg); ">
-								<a href="onde_ficar.html" class="color-2">
-									<div class="case-studies-summary">
-										<h2>Onde Ficar</h2>
-									</div>
-								</a>
-							</li>
-
-
-							<li class="one-third postcards animate-box" data-animate-effect="fadeIn" style="background-image: url(images/o-que-vestir2.jpg); ">
-								<a href="o_que_vestir.html" class="color-3">
-									<div class="case-studies-summary">
-										<h2>O que Vestir</h2>
-									</div>
-								</a>
-							</li>
-						</ul>		
-					</div>
-				</div>
-			</div>
-		</div>
-
 
 		<div id="tebw-services" class="tebw-section-gray">
 			<div class="container">
@@ -277,8 +235,47 @@
 			</div>
 		</div>
 
+		<div id="tebw-gallery" class="tebw-section">
+			<div class="container">
+				<div class="row">
+					<div class="col-md-8 col-md-offset-2 text-center tebw-heading animate-box">
+						<h2>Utilidades</h2>
+					</div>
+				</div>
+				<div class="row row-bottom-padded-md">
+					<div class="col-md-12">
+						<ul id="tebw-gallery-list">
+							
+							<li class="one-third postcards animate-box" data-animate-effect="fadeIn" style="background-image: url(images/dicas-beleza2.jpg); "> 
+								<a href="dica_beleza.html">
+									<div class="case-studies-summary">
+										<h2>Dicas de Beleza</h2>
+									</div>
+								</a>
+							</li>
+							<li class="one-third postcards animate-box" data-animate-effect="fadeIn" style="background-image: url(images/onde-ficar2.jpg); ">
+								<a href="onde_ficar.html" class="color-2">
+									<div class="case-studies-summary">
+										<h2>Onde Ficar</h2>
+									</div>
+								</a>
+							</li>
 
-		<div id="tebw-started" class="tebw-bg" style="background-image: url(images/footer.png); ">
+
+							<li class="one-third postcards animate-box" data-animate-effect="fadeIn" style="background-image: url(images/o-que-vestir2.jpg); ">
+								<a href="o_que_vestir.html" class="color-3">
+									<div class="case-studies-summary">
+										<h2>O que Vestir</h2>
+									</div>
+								</a>
+							</li>
+						</ul>		
+					</div>
+				</div>
+			</div>
+		</div>
+
+		<div id="tebw-started" class="tebw-bg" style="background-image: url(images/footer.jpg); ">
 			<div class="overlay"></div>
 			<div class="container">
 				<div class="row animate-box">
