--- a/onde_ficar.html
+++ b/onde_ficar.html
@@ -118,7 +118,22 @@
 			</div>
 		</div>
 	</div>
-
+	<div id="tebw-started" class="tebw-bg" style="background-image: url(images/footer.jpg); ">
+		<div class="overlay"></div>
+		<div class="container">
+			<div class="row animate-box">
+				<div class="col-md-8 col-md-offset-2 text-center tebw-heading">
+					<h2>RSVP</h2>
+					<p>Por favor confirme sua presença</p>
+				</div>
+			</div>
+			<div class="row animate-box">
+				<div class="col-md-6 col-xs-12 col-md-offset-3">
+					<a href="rsvp.html" class="btn btn-default btn-block">Contem comigo</a>
+				</div>
+			</div>
+		</div>
+	</div>
 	<footer id="tebw-footer" role="contentinfo">
 			<div class="container">
 
